service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  labels:
    app: codeserver
spec:
  ports:
  - name: http-web
    port: 80
    targetPort: 8443
  selector:
    app: codeserver
